@@ -243,10 +243,14 @@ class AbstractResource(XNATBaseObject):
         # FIXME: ugly hack because direct query fails
         uri, label = self.uri.rsplit('/', 1)
         data = self.xnat_session.get_json(uri)['ResultSet']['Result']
+
         try:
-            return next(x for x in data if x['label'] == label)
+            data = next(x for x in data if x['label'] == label)
         except StopIteration:
             raise ValueError('Cannot find full data!')
+
+        data['ID'] = data['xnat_abstractresource_id']  # Make sure the ID is present
+        return data
 
     @property
     def data(self):
@@ -278,3 +282,4 @@ class AbstractResource(XNATBaseObject):
     def upload(self, data, remotepath, overwrite=False):
         uri = '{}/files/{}'.format(self.uri, remotepath.lstrip('/'))
         self.xnat_session.upload(uri, data, overwrite=overwrite)
+        self.files.clearcache()
